--- a/css/index/style.css
+++ b/css/index/style.css
@@ -251,8 +251,7 @@ body {
 #header {
   background-color: var(--bg-white-1-color);
   width: 100%;
-  min-height: 130px;
-  z-index: 150;
+  height: 130px;
 }
 .header_container {
   text-align: center;
@@ -874,11 +873,13 @@ body {
   transform: translate(-50%, -50%);
   width: 96px;
   height: 96px;
+  border-radius: 1000px;
+  background-color: #f1f1f1;
 }
 .testimonial_container section figure img {
   object-fit: cover;
-  object-position: center;
   border-radius: 1000px;
+  max-width: 100%;
   height: 100%;
 }
 .testimonial_container section p {
